# spotify-collabs

./: .cache  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
data/: artists.csv  artists_backup.csv  collaborations.csv  collaborations_backup.csv  predicted_collaborations.csv
predictions/: graphSAGE.csv  graphSAGE_backup.csv  logical_rules.csv  logical_rules_backup.csv  node2vec.csv  node2vec_backup.csv
src/: graphSAGE.py  load_spotify_data.py  logical_knowledge.py  node2vec.py  populate_neo4j.py  print_results.py
