[tool.poetry]
name = "spotify-collabs"
version = "0.1.0"
description = ""
authors = ["Maximilian Pfeil <maximilian.j.pfeil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
spotipy = "^2.25.1"
neo4j = "^5.28.1"
torch = "^2.6.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
